----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-22 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/defines.lib.php3: Small bugfix.
    * libraries/defines_php.lib.php3: New constant: PMA_MYSQL_CLIENT_API.
    * libraries/common.lib.php3: Possible fix against "wrong parameter count"
      errors.

2003-03-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/transformations/text_plain__imagelink: display the
      image, with width and height options
    * libraries/transformations/text_plain__link: the link was not
      functional at my site; also, document this transform in lang.

2003-03-21 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php3: typo
    * lang/french update
    * image_jpeg__plain renamed to text_plain__imagelink, because
      the contents is not an image but a filename

2003-03-21 Michal Cihar  <nijel@users.sourceforge.net>
    * ldi_check.php3: Use $sql_query instead of $query to put query correctly
      to sql.php3.
    * libraries/display_export.lib.php3: Again fixed selecting table/db
      filename template.
    * tbl_move_copy.php3, libraries/sqlparser.lib.php3: Fixed copying of
      table.

2003-03-20 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/hebrew update, thanks to Yuval Sarna

2003-03-20 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/indonesian: Updated, thanks again to Rachim Tamsjadi.
    * libraries/mysql_wrappers.lib.php3: Fix for bug #705531 - check for field
      type when doing charset conversion.
    * libraries/display_export.lib.php3: Fixed selecting table/db filename
      template.
    * libraries/read_dump.lib.php3, db_details.php3,
      db_details_importdocsql.php3, tbl_dump.php3, tbl_query_box.php3, lang/*:
      Automatic detection of compression for uploaded data.

2003-03-19 Garvin Hicking <me@supergarv.de>
    * tbl_change.php3, tbl_query_box.php3, tbl_replace_fields.php3: